Fix StringField internal spacing

--- a/source/components/_StringField-LAF.sass
+++ b/source/components/_StringField-LAF.sass
@@ -14,7 +14,7 @@
 
 .StringFieldToken, .StringFieldInput
     margin              : 0
-    padding             : 0
+
 
 .StringFieldTokenForm, .StringField:not(.-token) .StringFieldInput
     border-width        : $StringField-border--width
@@ -22,6 +22,15 @@
     border-color        : $StringField-border--color
     border-radius       : $StringField-border--radius
     background-color    : $StringField-background--color
+    padding             : $StringField-internal_padding
+
+.StringFieldTokenForm
+    padding-bottom: 0
+
+.StringFieldTokens
+    margin-top:    $StringField-internal_padding
+.StringFieldToken
+    padding             : $StringField-internal_padding
 
 .StringField[data-error="true"]
     .StringFieldLabel
@@ -44,6 +53,8 @@
     border-color        : $StringFieldToken-border--color
     border-radius       : $StringFieldToken-border--radius
     background-color    : $StringFieldToken-background--color
+    margin-right        : $StringField-internal_padding
+    margin-bottom       : $StringField-internal_padding
     
 
 
@@ -61,15 +72,12 @@
     cursor: pointer
     opacity: 0.5
     border: 0
-    background-color: transparent
-    //background-image: $StringField_token_remove_image
-    background-repeat: no-repeat
-    background-size: 100%
-    background-position: center
-    width: 1em
-    height: 1em
-    vertical-align: -0.25em
-    color: transparent
+    background: transparent
+    font-size: 0
+    padding: 0
+    margin: 0
+    +icon(cancel)
+        font-size: 1rem
     &:hover
         opacity: 1
         &:active
